--- a/Virtual keyboard/style.css
+++ b/Virtual keyboard/style.css
@@ -37,6 +37,7 @@ body {
   justify-content: center;
   align-items: center;
   margin: 10px 10px 0 0;
+  transition: 0.4s ease-out;
 }
 
 #Backspace {
@@ -97,4 +98,5 @@ body {
 
 .highlited {
   background-color: #5571ee !important;
+  transform: scale(1.1);
 }
